# bdx-slow-control

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  MIGRATION.md  Makefile  README.md  SHA256SUMS  pyproject.toml  requirements.txt
config/: environment.json  environment_mcp9808.json  global.json  psu.json  runtime.env.example
docs/: architecture.md  deployment.md  development.md  operator-commands.md  raspberry.md  run-temperature-root-format.md  screen-launchers.md  validation.md
documentation/: Makefile  README.md  developer_manual.tex  quickstart_guide.tex
phoebus/: README.md  phoebus.env  phoebus.env.example
scripts/: bdx_stack_shutdown_common.sh  bootstrap.sh  configure_raspberry_network.sh  install_raspberry.sh  install_systemd.sh  install_user_commands.sh  kill_slow_control_all.sh  kill_slow_control_archiver.sh  kill_slow_control_ioc.sh  kill_slow_control_phoebus.sh  launch_phoebus.sh  run_all_simulated.sh  run_prototype_with_phoebus.sh  simone_laptop_ethernet.sh  start_bdx_stack.sh  start_bdx_stack.sh.bak
systemd/: bdx-prototype-ioc.service
tests/: test_archiver_batch_tool.py  test_archiver_deployment.py  test_archiver_repair.py  test_archiver_retrieval.py  test_archiver_status.py  test_chiller_ioc.py  test_config.py  test_cpx400dp_driver.py  test_deployment_profiles.py  test_ecosilver_re_1225s_driver.py  test_environment_check.py  test_environment_ioc.py  test_genh600_driver.py  test_mcp9808_driver.py  test_operator_archiver_registration.py  test_operator_commands.py  test_phoebus_displays.py  test_power_ioc.py  test_prototype.py  test_runtime.py  (+9 more)
(+150 files in other folders)
