[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bdx-slow-control"
version = "0.2.0"
description = "Modular EPICS slow-control framework for the BDX prototype"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
authors = [
  {name = "BDX Collaboration"}
]
dependencies = [
  "caproto>=1.1,<2"
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "ruff>=0.4"
]

[project.scripts]
bdx-psu-ioc = "bdx_slow_control.cli:psu_main"
bdx-chiller-ioc = "bdx_slow_control.cli:chiller_main"
bdx-environment-ioc = "bdx_slow_control.cli:environment_main"
bdx-hv-ioc = "bdx_slow_control.cli:hv_main"
bdx-daq-ioc = "bdx_slow_control.cli:daq_main"
bdx-global-ioc = "bdx_slow_control.cli:global_main"
bdx-prototype-ioc = "bdx_slow_control.cli:prototype_main"
bdx-pv-list = "bdx_slow_control.cli:pv_list_main"
bdx-generate-displays = "bdx_slow_control.phoebus_generator:main"
bdx-environment-check = "bdx_slow_control.environment_check:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"
